# fir_simd

./: .gitignore  2  CMakeLists.txt  README.md  fir.py
2/: CMakeLists.txt  main.cpp
